tests/errors/arg_count_mismatch.con
fn main() {
  println();
# ^^^^^^^^^ wrong number of arguments
}
